<resources>
    <string name="app_name">My Test Application</string>
    <string name="start_fragment">start_fragment</string>
    <string name="web_view_fragment">web_view_fragment</string>
    <string name="no_internet_fragment">no_internet_fragment</string>
    <string name="terms_and_condition_agreement">TERMS AND CONDITION AGREEMENT</string>
    <string name="agree">Agree</string>
    <string name="exit">Exit</string>
    <string name="check_your_internet_connection">CHECK YOUR INTERNET CONNECTION</string>
    <string name="facebook_app_id">1234</string>
    <string name="facebook_client_token">56789</string>
</resources>